--- a/css/homepage.css
+++ b/css/homepage.css
@@ -7,9 +7,12 @@ body {
     margin: 0px;
 }
 
+
 .page {
 	display: block;
 }
+
+
 .header {
 	background-color: black;
 	display: block;
@@ -94,7 +97,6 @@ li a {
     cursor: pointer;
     font-family: heroic;
 }
-
 li a:hover {
     color: #d9d9d9;
 }
@@ -103,4 +105,46 @@ li a:hover {
     width: 7px;
     display: inline-block;
     margin-left: 4px;
+}
+
+
+.add {
+	height: 20px;
+    width: 100%;
+    background-color: black;
+    display: block;
+    float: left;
+    border-bottom: 1px solid black;
+}
+
+.storiesblack {
+
+}
+.stories-black{
+	width: 100%;
+	
+    background: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
+    display: block;
+    float: left;
+    border-bottom: 1px solid black;
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 1px;
+}
+.stories-black__story {
+	background: #000000;
+    color: #ffffff;
+    margin-bottom: 1px;
+    padding: 8px;
+}
+.stories-black__story__inner__pic {
+	width: 30%;
+	    display: inline-block;
+}
+.image {
+	width: 100%;
+}
+.stories-black__story__inner__text {
+	width: 60%;
+	display: inline-block;
 }
