--- a/css/homepage.css
+++ b/css/homepage.css
@@ -127,10 +127,11 @@ li a:hover {
     color: #ffffff;
     margin-bottom: 1px;
     padding: 8px;
+        overflow: auto;
 }
 
 .stories-black__story__inner__text {
-   width: 70%;
+   width: 65%;
     display: inline-block;
     text-align: center;
     margin-left: -4px;
@@ -140,6 +141,8 @@ li a:hover {
     font-weight: 600;
     letter-spacing: normal;
     line-height: 1.2;
+    float:right;
+    box-sizing: border-box;
     
 }
 .stories-black__story__inner__pic {
@@ -154,12 +157,25 @@ li a:hover {
 	color: white;
     text-decoration: none;
     display: block;
+    text-align: start;
 }
 
+.author {
+	width: 100%;
+    text-align: start;
+    display: inline-block;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: normal;
+    line-height: normal;
+    
+    font-size: 0.75em;
+}
 .by {
 	margin: 0px;
     display: inline-block;
-    margin-left: 16px;
+    
     float: left;
 }
 .stories-black__story__inner__text__small {
@@ -168,3 +184,14 @@ li a:hover {
     float: left;
     margin-left: 9px;
 }
+.s2 {
+	font-weight: 600;
+    letter-spacing: normal;
+    font-size: .8em;
+}
+.s2__title {
+	font-size: .9em;
+    margin-bottom: .3rem;
+}
+
+
