--- a/css/homepage.css
+++ b/css/homepage.css
@@ -145,9 +145,16 @@ body {
     box-sizing: border-box;
     
 }
+.bigtext {
+    width: 50%;
+}
+
 .stories-black__story__inner__pic {
 	display: inline-block;
 	width: 30%;
+}
+.bigpic {
+    width: 45%;
 }
 .image {
 	    width: 100%;
@@ -275,10 +282,132 @@ body {
     width: 2px;
 }
 
+.guidebook {
+    background-color: black;
+    width: 100%;
+    display: inline-block;
+    
+}
+.guidebook__header {
+    padding: 1.2rem 16px 2rem;
+    position: relative;
+
+}
+.guidebook__header:after{
+    background: #e5127d;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 39px;
+    bottom: 16px;
+    left: 16px;
+    z-index: 1;
+
+
+}
+
+
+.guidebook__header:before {
+    background-color: #e5127d;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 40px;
+    bottom: 15px;
+    width: 35px;
+    z-index: 1;
+    transform: rotate(-120deg);
+    transform-origin: top right;
+}
+.imageguidebook {
+    max-width: 250px;
+    max-height: 50px;
+}
+.guidebook__header a {
+    color: #e5127d;
+    letter-spacing: .02rem;
+}
+.guidebook__header a:after {
+    content: "";
+    display: inline-block;
+    height: 0;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    border-top: 5px solid transparent;
+    margin-left: 5px;
+    width: 0;
+}
+.guidebook__header__link {
+    display: inline-block;
+    line-height: 45px;
+    float: right;
+}
+.guidebook__header__link a {
+    color: #e5127d;
+    letter-spacing: .02rem;
+    text-decoration: none;
+}
+.guidebook__header__link a:after {
+    content: "";
+    display: inline-block;
+    height: 0;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    border-top: 5px solid transparent;
+    margin-left: 5px;
+    width: 0;
+}
+.guidebook__content {
+    display: inline-block;
+    margin: 0;
+    width: 90%;
+    padding: 0 16px .6rem;
+}
+.guidebook__content ul {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+.guidebook__content li{
+    background-color: #ffffff;
+    border-radius: 1px;
+    list-style: none;
+    width: 100%;
+    margin-bottom: 8px;
+    display: inline-block;
+
+}
+.guidebook__content__img {
+    display: inline-block;
+    width: 30%;
+    float: left;
+}
+.guidebook__content__head {
+   padding: 0 16px;
+    text-transform: none;
+    display: inline-block;
+    width: 55%;
+    font-family: "adelle-sans",Helvetica,sans-serif;
+    color: #424242;
+    text-align: start;
+}
+.guidebook__content {
+
+}
+.guidebook__content li a {
+     color: #424242;
+      font-size: .9em;
+    line-height: 1.3;
+    font-weight: bolder;
+        text-decoration: none;
+} 
+
+
+
 .morestories {
     display: inline-block;
     width:100%;
-    
+    margin-top: -4px;
     background-color: #e5127d;
     color: #ffffff;
     cursor: pointer;
