--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,6 +2,10 @@
     font-family: heroic;
     src: url(./Heroic.ttf);
 }
+@font-face {
+    font-family: adellesans;
+    src: url(./adellesans.ttf);
+}
 body {
     display: block;
     margin: 0px;
@@ -9,43 +13,43 @@ body {
 
 
 .page {
-	display: block;
+    display: inline-block;
 }
 
 
 .header {
-	background-color: black;
-	display: block;
-	width: 100%;
-	align-items: center;
-	min-height: 35px;
-	float: left;
+    background-color: black;
+    display: block;
+    width: 100%;
+    align-items: center;
+    min-height: 35px;
+    float: left;
 }
 .header__logo {
-	width: 70%;
-	display: inline-block;
-	line-height: 1;
+    width: 70%;
+    display: inline-block;
+    line-height: 1;
 }
 .header__logo__container {
-	display: inline-block;
+    display: inline-block;
     margin-left: 16px;
     padding: 8px 0;
     position: relative;
     width: auto;
 }
 .thevergesvg {
-	height:25px;
-	max-width: 150px;
+    height:25px;
+    max-width: 150px;
 }
 .header__userlogo {
-	float: right;
-	width: 30%;
-	vertical-align: middle;
-	margin-top: 3.7px;
-	display: inline-block; 
+    float: right;
+    width: 30%;
+    vertical-align: middle;
+    margin-top: 3.7px;
+    display: inline-block; 
 }
 .header__userlogo__container {
-	height: 35px;
+    height: 35px;
     line-height: 35px;
     position: relative;
     text-align: center;
@@ -54,7 +58,7 @@ body {
     float: right;
 }
 .userlogosvg {
-	fill: #ffffff;
+    fill: #ffffff;
     height: 16px;
     position: relative;
     top: -2px;
@@ -63,23 +67,26 @@ body {
     margin-top: 9px;
 }
 .header__navbar {
-	float: none;
-	border-bottom: 1px solid #333333;
-	
+    float: none;
+    border-bottom: 1px solid #333333;
+    
 }
-ul{
-	list-style-type: none;
+.header__navbar ul{
+    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
- }
-li {
-	float:left;
-	width: 25%;
-	border-left: 1px solid #333333;
-	box-sizing: border-box;
 }
-li a {
+.header__navbar li {
+
+
+    float:left;
+    width: 25%;
+    border-left: 1px solid #333333;
+    box-sizing: border-box;
+}
+.header__navbar li a {
+
     display:inline-block; 
     color: white;
     text-align: center;
@@ -93,58 +100,438 @@ li a {
     cursor: pointer;
     font-family: heroic;
 }
-li a:hover {
+
+
+.header__navbar li a:hover {
+
     color: #d9d9d9;
 }
 .header__navbar__arrow {
-	height: 7px;
+    height: 7px;
     width: 7px;
     display: inline-block;
     margin-left: 4px;
 }
 
 
-.add {
-	height: 20px;
-    width: 100%;
-    background-color: black;
-    display: block;
-    float: left;
-    border-bottom: 1px solid black;
-}
-
-
 .stories-black{
-	width: 100%;
-	
+    width: 100%;
     background: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
-    display: block;
-    float: left;
-    border-bottom: 1px solid black;
-    margin: 0 auto;
-    max-width: 1300px;
-    padding: 1px;
+  display: block;
+  float: left;
+  border-bottom: 1px solid black;
+  margin: 0 auto;
+  max-width: 1300px;
+  padding: 1px;
 }
 .stories-black__story {
-	background: #000000;
+    background: #000000;
     color: #ffffff;
     margin-bottom: 1px;
     padding: 8px;
-}
-.stories-black__story__inner__pic {
-	width: 30%;
-	    display: inline-block;
-}
-.image {
-	width: 100%;
+        overflow: auto;
 }
 .stories-black__story__inner__text {
-	width: 60%;
-	display: inline-block;
+   width: 65%;
+    display: inline-block;
+    text-align: center;
+    margin-left: -4px;
+    vertical-align: top;
+    font-size: 1.2em;
+    font-family: adellesans;
+    font-weight: 600;
+    letter-spacing: normal;
+    line-height: 1.2;
+    float:right;
+    box-sizing: border-box;
+    
+}
+.bigtext {
+    width: 50%;
+}
+
+.stories-black__story__inner__pic {
+    display: inline-block;
+    width: 30%;
+}
+.bigpic {
+    width: 45%;
+}
+.image {
+        width: 100%;
+}
+.stories-black__story__inner__text__big {
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: start;
+}
+.author {
+    width: 100%;
+    text-align: start;
+    display: inline-block;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: normal;
+    line-height: normal;
+    
+    font-size: 0.75em;
+}
+.by {
+    margin: 0px;
+    display: inline-block;
+    
+    float: left;
+}
+.stories-black__story__inner__text__small {
+    text-decoration: none;
+    color: #e5127d;
+    float: left;
+    margin-left: 9px;
+}
+.s2 {
+    font-weight: 600;
+    letter-spacing: normal;
+    font-size: .8em;
+}
+.s2__title {
+    font-size: .9em;
+    margin-bottom: .3rem;
+}
+
+.stories-white {
+    width: 100%;
+    background: white;
+    display: block;
+    float: left;
+    
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 16px 0;
+    box-sizing: border-box;
+    
+}
+
+.stories-white__story {
+    background-color: #ffffff;
+    border-top: 1px solid #e7e7e8;
+    margin-bottom: 8px;
+    width: 100%;
+}
+.stories-white__story__inner {
+    padding: 8px 0;
+    width: 100%;
+}
+.stories-white__story__inner__pic {
+    display: inline-block;
+    width: 30%;
+        vertical-align: top;
+}
+.image {
+    width: 100%;
+}
+.stories-white__story__inner__text {
+    width: 60%;
+    display: inline-block;
+    padding: 0 5px;
+}
+.stories-white__story__inner__text__title {
+
+}
+.stories-white__story__inner__text__details {
+    display: inline-block;
+    font-family: Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: normal;
+    line-height: normal;
+    font-size: 0.75em;
+    color: #6A6A6A;
+}
+.authorwhite {
+    font-weight: 300;
+    letter-spacing: normal;
+    text-decoration: none;
+    color: #e5127d;
+    display: inline-block;
+    
+    content: "";
+    height: 1.1em;
+    vertical-align: middle;
+   
+}
+.article {
+    font-weight: 300;
+    letter-spacing: normal;
+    text-decoration: none;
+    color: #6A6A6A;
+    display: inline-block;
+    
+   
+}
+
+.article:before {
+    border-left: 1px solid currentColor;
+    content: "";
+    display: inline-block;
+    height: 1.1em;
+    margin: 0 .4em;
+    vertical-align: middle;
+    width: 2px;
+}
+
+.guidebook {
+    background-color: black;
+    width: 100%;
+    display: inline-block;
+    
+}
+.guidebook__header {
+    padding: 1.2rem 16px 2rem;
+    position: relative;
+
+}
+.guidebook__header:after{
+    background: #e5127d;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 39px;
+    bottom: 16px;
+    left: 16px;
+    z-index: 1;
+
+
 }
 
 
+.guidebook__header:before {
+    background-color: #e5127d;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 40px;
+    bottom: 15px;
+    width: 35px;
+    z-index: 1;
+    transform: rotate(-120deg);
+    transform-origin: top right;
+}
+.imageguidebook {
+    max-width: 250px;
+    max-height: 50px;
+}
+.guidebook__header a {
+    color: #e5127d;
+    letter-spacing: .02rem;
+}
+.guidebook__header a:after {
+    content: "";
+    display: inline-block;
+    height: 0;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    border-top: 5px solid transparent;
+    margin-left: 5px;
+    width: 0;
+}
+.guidebook__header__link {
+    display: inline-block;
+    line-height: 45px;
+    float: right;
+}
+.guidebook__header__link a {
+    color: #e5127d;
+    letter-spacing: .02rem;
+    text-decoration: none;
+}
+.guidebook__header__link a:after {
+    content: "";
+    display: inline-block;
+    height: 0;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    border-top: 5px solid transparent;
+    margin-left: 5px;
+    width: 0;
+}
+.guidebook__content {
+    display: inline-block;
+    margin: 0;
+    width: 90%;
+    padding: 0 16px .6rem;
+}
+.guidebook__content ul {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+.guidebook__content li{
+    background-color: #ffffff;
+    border-radius: 1px;
+    list-style: none;
+    width: 100%;
+    margin-bottom: 8px;
+    display: inline-block;
 
-@media(min-width:600px) {
+}
+.guidebook__content__img {
+    display: inline-block;
+    width: 30%;
+    float: left;
+}
+.guidebook__content__head {
+   padding: 0 16px;
+    text-transform: none;
+    display: inline-block;
+    width: 55%;
+    font-family: "adelle-sans",Helvetica,sans-serif;
+    color: #424242;
+    text-align: start;
+}
+.guidebook__content {
+
+}
+.guidebook__content li a {
+     color: #424242;
+      font-size: .9em;
+    line-height: 1.3;
+    font-weight: bolder;
+        text-decoration: none;
+} 
+
+
+
+.morestories {
+    display: inline-block;
+    width:100%;
+    margin-top: -4px;
+    background-color: #e5127d;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: .75em;
+    letter-spacing: .09em;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.morestories__text {
+    text-decoration: none;
+    font-family: Helvetica, sans-serif;
+    font-size: 16px;
+    letter-spacing: .09em;
+    color: white;
     
+}
+
+.footer {
+    display: inline-block;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    padding-top: 16px;
+    border-top: 1px solid #343434;
+}
+.footer__logo {
+    width:90%;
+    margin: auto;
+    padding: 8px 16px;
+}
+.footer__logo__svg {
+    width: 90%;
+    margin: auto;
+}
+
+.footer__termsofuse {
+    font-size: .75em;
+    padding: 8px 16px;
+        padding-bottom: 0px;
+
+}
+.footer__termsofuse__sec1 {
+    margin: 0 0 8px;
+    padding: 0;
+    text-align: center;
+        line-height: 1.5;
+
+}
+.footer__termsofuse__sec1 li {
+    display: inline-block;
+    box-sizing: border-box;
+    
+}
+.footer__termsofuse__sec1 li a {
+    color: #e5127d;
+    text-decoration: none;
+
+}
+.footer__termsofuse__sec1 li:after {
+    content: "\2022";
+    display: inline-block;
+    margin: 0 8px;
+}
+.footer__termsofuse__sec1 li:last-child:after {
+    content:'';
+}
+.footer__termsofuse__sec2 {
+    margin: 0 0 8px;
+    padding: 0;
+    text-align: center;
+        line-height: 1.5;
+
+}
+.footer__termsofuse__sec2 li {
+    display: inline-block;
+    box-sizing: border-box;
+    
+}
+.footer__termsofuse__sec2 li a {
+    color: #e5127d;
+    text-decoration: none;
+
+}
+.footer__termsofuse__sec2 li:after {
+    content: "\2022";
+    display: inline-block;
+    margin: 0 8px;
+}
+.footer__termsofuse__sec2 li:last-child:after {
+    content:'';
+}
+.info1 {
+    text-align: center;
+        line-height: 1.5;
+}
+.info1 a {
+    text-decoration: none;
+    color: #e5127d;
+    display: inline-block;
+}
+.footer__section {
+    font-size: .75em;
+    padding: 8px 16px;
+    padding-bottom: 5px;
+    line-height: 1.5;
+}
+.voxsvg {
+    width: 60%;
+    margin: auto;
+}
+.footer__section a {
+    text-decoration: none;
+    color: #e5127d;
+    display: inline-block;
+   font-size: 1.4em;
+   text-align: center;
+    display: block;
+}
+.inc {
+    text-align: center;
+    font-size: 1.4em;
+}
+.inc a {
+    display: inline-block;
+    font-size: 1em;
+
 }
