--- a/css/homepage.css
+++ b/css/homepage.css
@@ -541,34 +541,120 @@ body {
 
 @media (min-width:600px) {
 
-.image {
-    width: 100%;
-    height: 100%;
+.stories-black {
+    padding: 2px;
 }
 .bigpic {
-    width: 100%;
-        height: 380px;
+    width: 50%;
+    height: 100%;
+}
+.stories-black__story {
+    
+    margin-bottom: 1px;
+ padding: 0px; 
+     height: 300px;
+   
+}
+.image {
+      margin-bottom: -4px;
+      height: 100%;
 }
 .bigtext {
-    width: 70%;
-    height: 22%;
-    position: absolute;
-    bottom: 14%;
-    left: 15%;
-    background-color: black;
-    text-align: center;
-    padding-top: 11px;
+   width: 40%;
+    margin: 5%;
+    margin-bottom: auto;
+    margin-top: 3%;
 }
-.stories-black div:first-child {
-   /* width: 70%;
-    height: 22%;
-    position: absolute;
-    bottom: 14%;
-    left: 15%;
-    background-color: black;
-    text-align: center;
-    padding-top: 11px;*/
-} 
+
+
+.bigtext a:first-child {
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: start;
+    font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+    font-weight: 700;
+    letter-spacing: .008em;
+    text-transform: uppercase;
+    font-size: 2em;
+}
+.author {
+  
+    font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+        font-size: 1em;
+}
+
+.stories-black > div:nth-child(n+2) {
+  width: 32.9%;
+    display: inline-block;
+    margin-top: 1px;
+    margin-left: 0px;
+    margin-right: 0px;
+    box-sizing: border-box;
+}
+.stories-black div:nth-child(5) {
+    width: 100%;
+       margin-top: -2px;
+        margin-bottom: -2px;
+            height: 100%;
+}
+
+
+.stories-black div:nth-child(5) div:last-child div{
+    float: right;
+    text-align: end;
+    margin: 0px;
+}
+.stories-black div:nth-child(5) div:last-child div a{
+    float: right;
+   
+}
+.stories-black div:nth-child(5) div:last-child div p{
+  float: none;
+   
+}
+.stories-black div:nth-child(5) a:first-child{
+     color: white;
+    text-decoration: none;
+    display: block;
+    text-align: end;
+    font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+    font-weight: 700;
+    letter-spacing: .008em;
+    text-transform: uppercase;
+    font-size: 2.5em;
+}
+.stories-black > div:nth-child(n+2) div:last-child {
+         width: 100%;
+    height: 4%;
+    padding: 16px;
+    font-size: 20px;
+    
+}
+.stories-black > div:nth-child(n+2) div:first-child {
+   width: 100%;
+    height: 50%;
+    
+}
+.stories-black div:nth-child(5) div:first-child{
+width: 50%;
+    height: 100%;
+}
+.stories-black div:nth-child(5) div:last-child{
+    width: 40%;
+    margin: 5%;
+    margin-bottom: auto;
+    margin-top: 6%;
+    float: left;
+}
+
+
+
+
+
+
+
+
 
 
 
