--- a/css/homepage.css
+++ b/css/homepage.css
@@ -57,6 +57,9 @@ body {
     width: 48px;
     float: right;
 }
+.header__search__container {
+    display: none;
+}
 .userlogosvg {
     fill: #ffffff;
     height: 16px;
@@ -71,12 +74,16 @@ body {
     border-bottom: 1px solid #333333;
     
 }
+.header__options {
+    display: none;
+}
 .header__navbar ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
+
 .header__navbar li {
 
 
@@ -112,6 +119,13 @@ body {
     display: inline-block;
     margin-left: 4px;
 }
+.header__navbar li:nth-child(n+4) {
+    display: none;
+}
+.header__navbar li:last-child {
+    display: inline-block;
+}
+
 
 
 .stories-black{
@@ -541,6 +555,108 @@ body {
 
 @media (min-width:600px) {
 
+    .header__logo__container {
+        position: relative;
+        width: 67%;
+        margin: auto;
+        text-align: center;
+        padding: 64px 16px;
+    }
+    .thevergesvg {
+        height: 100%; 
+         max-width: 100%; 
+    }
+    .header__logo {
+        width: 75%;
+        display: block;
+        line-height: 1;
+        margin: auto;
+        text-align: center;
+    }
+    .header_top {
+        background-image:url(https://cdn.vox-cdn.com/uploads/chorus_asset/file/7383215/Masthead_DB_1.0.png);
+    }
+    .header__userlogo {
+       display: none;
+    }
+
+    .header__options {
+        display: inline-block;
+        float: right;
+        height: 100%;
+        width: 12%;
+    }
+
+    .header__search__container {
+        height: 20px;
+        line-height: 35px;
+        position: relative;
+        text-align: center;
+        vertical-align: middle;
+        width: 40px;
+        float: right;
+        display: block;
+    }
+    .header__tab__userlogo {
+        float: left;
+        width: 50%;
+        vertical-align: middle;
+        margin-top: 3.7px;
+        display: inline-block;
+    }
+    .header__search{
+        display: inline-block;
+        float: right;
+        width: 50%;
+        margin-top: 14px;
+    }
+    .header__tab__userlogo__container {
+        height: 35px;
+        line-height: 35px;
+        position: relative;
+        text-align: center;
+        vertical-align: bottom;
+        width: 48px;
+        float: right;
+    }
+    .header__navbar ul {
+        width: 88%;
+        float: left;
+    }
+    .header__navbar li {
+        float:left;
+        width: 14%;
+        border: none;
+        box-sizing: border-box;
+    }
+    .header__navbar li:nth-child(n+5) {
+        display: none;
+        display: inline-block;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .stories-black {
     padding: 2px;
 }
@@ -621,18 +737,20 @@ body {
     font-weight: 700;
     letter-spacing: .008em;
     text-transform: uppercase;
-    font-size: 2.5em;
+    font-size: 2em;
 }
 .stories-black > div:nth-child(n+2) div:last-child {
     width: 100%;
     height: 4%;
     padding: 16px;
     font-size: 20px;
+    box-sizing: border-box;
     
 }
 .stories-black > div:nth-child(n+2) div:first-child {
     width: 100%;
     height: 50%;
+    float: right;
     
 }
 .stories-black div:nth-child(5) div:first-child{
@@ -640,10 +758,8 @@ width: 50%;
     height: 100%;
 }
 .stories-black div:nth-child(5) div:last-child{
-    width: 40%;
-    margin: 5%;
+    width: 50%;
     margin-bottom: auto;
-    margin-top: 6%;
     float: left;
 }
 
