--- a/css/homepage.css
+++ b/css/homepage.css
@@ -30,6 +30,9 @@ body {
     display: inline-block;
     line-height: 1;
 }
+.header__date {
+    display: none;
+}
 .header__logo__container {
     display: inline-block;
     margin-left: 16px;
@@ -131,12 +134,13 @@ body {
 .stories-black{
     width: 100%;
     background: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
-  display: block;
-  float: left;
-  border-bottom: 1px solid black;
-  margin: 0 auto;
-  max-width: 1300px;
-  padding: 1px;
+    display: block;
+    float: left;
+    border-bottom: 1px solid black;
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 1px;
+    box-sizing: border-box;
 }
 .stories-black__story {
     background: #000000;
@@ -375,6 +379,7 @@ body {
     margin: 0;
     width: 90%;
     padding: 0 16px .6rem;
+    box-sizing: border-box;
 }
 .guidebook__content ul {
     width: 100%;
@@ -452,6 +457,7 @@ body {
     width:90%;
     margin: auto;
     padding: 8px 16px;
+    box-sizing: border-box;
 }
 .footer__logo__svg {
     width: 90%;
@@ -556,22 +562,30 @@ body {
 @media (min-width:600px) {
 
     .header__logo__container {
-        position: relative;
-        width: 67%;
+       position: relative;
+        width: 100%;
         margin: auto;
         text-align: center;
-        padding: 64px 16px;
+        padding-top: 64px;
+        padding-bottom: 64px;
     }
     .thevergesvg {
         height: 100%; 
          max-width: 100%; 
     }
     .header__logo {
-        width: 75%;
+        width: 90%;
         display: block;
         line-height: 1;
         margin: auto;
         text-align: center;
+    }
+    .header__date {
+        display: inline-block;
+        font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+        margin-top: 8px;
+        color: white;
+            font-size: 20px;
     }
     .header_top {
         background-image:url(https://cdn.vox-cdn.com/uploads/chorus_asset/file/7383215/Masthead_DB_1.0.png);
