--- a/css/homepage.css
+++ b/css/homepage.css
@@ -131,6 +131,9 @@ body {
 
 
 
+.bodywrapper {
+    display: inline-block;
+}
 .stories-black{
     width: 100%;
     background: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
@@ -218,6 +221,9 @@ body {
     margin-bottom: .3rem;
 }
 
+.sidebar {
+    display: none;
+}
 .stories-white {
     width: 100%;
     background: white;
@@ -755,7 +761,9 @@ body {
         float: left;
     }
 
-
+    .bodywrapper {
+        display: inline-block;
+    }
     .guidebook__content {
         width: 97%;
     }
@@ -836,7 +844,139 @@ body {
 
 }
 
-@media (min-width:600px) {
+@media (min-width:1024px) {
+
+
+
+.bodywrapper {
+    display: inline-block;
+    width: 62%;
+}
+.sidebar {
+   display: inline-block;
+    width: 31%;
+    vertical-align: middle;
+    box-sizing: border-box;
+    margin-right: 16px;
+    margin-top: 16px;
+    margin-left: 2rem;
+}
+.sidebar__header__svg {
+    height: 64px;
+}
+.sidebar__header {
+    position: relative;
+    border-bottom: 0;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.sidebar__header:before {
+    position: absolute;
+    background-color: #393092;
+    content: "";
+    height: 2px;
+    bottom: 0;
+    left: 15px;
+    right: 0;
+    z-index: 1;
+}
+.sidebar__header:after {
+    background-color: #393092;
+    bottom: 12px;
+    content: "";
+    height: 2px;
+    left: -2px;
+    position: absolute;
+    -webkit-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-transform: rotate(-120deg);
+    transform: rotate(-120deg);
+    width: 25px;
+    z-index: 1;
+}
+
+.sidebar__contents {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 16px;
+    position: relative;
+}
+
+.sidebar__contents li:first-child div:first-child {
+    margin-top: -18px;
+}
+.sidebar__contents:after {
+    position: absolute;
+    background-color: #393092;
+    width: 2px;
+    content: "";
+    bottom: 130px;
+    right: -1px;
+    top: -2px;
+    z-index: 1;
+}
+
+.sidebar__contents__item {
+    margin-bottom: 0;
+    padding: 32px 0 0;
+}
+
+.sidebar__contents__item__image {
+
+}
+.sidebar__contents__item__image__pic {
+    width: 100%;
+    height: 100%;
+}
+.sidebar__contents__item__heading {
+    font-weight: 600;
+    letter-spacing: normal;
+    color: #626262;
+    font-family: "adelle-sans",Helvetica,sans-serif;
+    margin-top: 10px;
+
+}
+.sidebar__more {
+    text-align: right;
+    padding-right: 24px;
+    margin: 16px 0;
+    font-weight: 500;
+    line-height: 1;
+    font-size: .9em;
+    position: relative;
+}
+.sidebar__more__txt {
+        color: #e5127d;
+    font-family: "Heroic",Arial Narrow,Helvetica,sans-serif;
+    letter-spacing: .05em;
+    text-align: right;
+    position: relative;
+    display: inline-block;
+    padding-right: 2px;
+    padding-bottom: 3px;
+}
+.sidebar__more:before {
+    background-color: #393092;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 24px;
+    top: 21px;
+    z-index: 1;
+    width: 121px;
+}
+.sidebar__more:after {
+    background-color: #393092;
+    content: "";
+    height: 2px;
+    position: absolute;
+    right: 5px;
+    top: 11px;
+    z-index: 1;
+    transform: rotate(120deg);
+    width: 25px;
+}
+}
 
 .info1 a {
     
