--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,6 +9,7 @@
 body {
     display: block;
     margin: 0px;
+    background-color: black;
 }
 
 
@@ -781,12 +782,9 @@ body {
         margin-top: 15px;
             
     }
-    .morestories {
-        max-width: 1300px;
-        margin: auto;
-    }    
+    
     .footer {
-        max-width: 1300px;
+       
         display: inline-block;
         width: 100%;
         background-color: #000;
@@ -857,6 +855,10 @@ body {
     .stories-black {
         padding: 2px;
         margin: auto;
+        display: block;
+        max-width: 1300px;
+        float: none;
+
     }   
     .stories-black__story {
         margin-bottom: 1px;
@@ -864,8 +866,11 @@ body {
         height: 500px;
     }
     .stories-black >div:first-child {
-        width: 70%;
+        width: 70.7%;
         display: inline-block;
+        margin-top: 1px;
+        margin-right: -2px;
+    
     }
     .stories-black >div:nth-child(2) {
         width: 29%;
@@ -888,12 +893,15 @@ body {
         line-height: 26px;
     }
     .stories-black >div:nth-child(3) {
-        width: 29%;
+        width: 29.5%;
         display: inline-block;
+        margin-top: -3px;
     }
     .stories-black >div:nth-child(4) {
-        width: 70%;
+        width: 70.2%;
         display: inline-block;
+        margin-top: -3px;
+        margin-left: -2px;
     }
     .stories-black >div:nth-child(4) >div:first-child {
         width: 50%;
@@ -915,12 +923,20 @@ body {
         margin-top: 90px;
 
     }
-
+    .stories-black >div:nth-child(5) {
+        margin-top: -3px;
+        margin-bottom: -4px;
+    }
     .stories-black >div:nth-child(5) >div:last-child a:first-child{ 
        line-height: 40px;
         margin-top: 90px;
     }
 
+    .bodypart {
+        display: block;
+        max-width: 1300px;
+        background-color: white;
+    }
     .bodywrapper {
         display: inline-block;
         width: 62%;
@@ -1050,7 +1066,17 @@ body {
         width: 25px;
     }
 
-
+    .morestories {
+        max-width: 1300px;
+        margin: auto;
+        display: block;
+    }
+     .footer {
+        max-width: 1300px;
+        display: block;
+        outline: overflow;
+        overflow: auto;
+     }    
     .info1 a {
         
         display: block;
